--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -48,13 +48,28 @@
 	width: 50%;
 	padding-left: 20;
 }
-#Raktar
+.Raktar
 {
 	margin-top: 30;
 	background-color: blue;
 	height: 200;
 	width: 75%;
 }
+
+table
+{
+	border: 2px solid black;
+	border-collapse: collapse;
+	width: 100%;
+	height: 200;
+}
+
+tr td
+{
+	border: 2px solid black;
+	border-collapse: collapse;
+}
+
 #History 
 {
 	background-color: yellow;
