Ahol kellett ott relatív méretekre állítottam a dolgokat. elöbb rosszat adtam hozzá lol

--- a/Resources/CSS/fooldal.css
+++ b/Resources/CSS/fooldal.css
@@ -49,7 +49,6 @@
 	background-color: green;
 	margin-left: 20px;
 	margin-bottom: 30px;
-	display: flex;
 }
 
 
@@ -64,9 +63,13 @@
 {
 background-color: blue;
 height: inherit;
-width: 20%;
+width: 19%;
+float: right;
 }
-
+.inline 
+{
+	display: inline-block;
+}
 .naplo
 {
 	height: 70vh;
