--- a/Resources/CSS/fooldal.css
+++ b/Resources/CSS/fooldal.css
@@ -24,20 +24,30 @@
 }
 
 
-.menu-gombok button
+.menu-gombok
 {
 	width: 10em;
 	height: 3em;
 	border-radius: 10px;
 	font-size: 15px;
 	overflow: hidden;
-	float: right;
 	background-color: #FF0AA1;
 	border-style: solid;
 	border-color: transparent;
 	margin-left: -80px;
+	text-align: center;
+	vertical-align: middle;
+}
+a 
+{
+	text-decoration: none;
+	font-size: 20px;
 
+}
 
+a:visited
+{<!-- itt ezt majd megoldani --!>
+	font-style: italic;
 }
 .menusor-spacer 
 {
@@ -61,10 +71,18 @@
 
 #chat-box
 {
-background-color: blue;
-height: inherit;
-width: 19%;
-float: right;
+	background-color: yellow;
+	height: inherit;
+	float: right;
+	width: 20%;
+}
+
+#chat-box iframe
+{
+	background-color: yellow;
+	height: 99.1%;
+	float: right;
+	width: 100%;
 }
 .inline 
 {
