--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -1,29 +1,9 @@
-.navbar
-{
-	height: 10%;
-	width: 96%;
-	margin-left: 20px;
-	margin-right: 20px;
-	position: fixed;
-	top: 10;
-	background-color: red;
-}
-
-#spacer 
-{
-	height:20%;
-}
 .chatbox 
 {
 	background-color: blue;
 	width: 50%;
 	height: 80%;
 	margin-right: -10%;
-}
-
-.inline
-{
-display: inline-block;
 }
 
 
@@ -37,7 +17,7 @@ display: inline-block;
 	background-color: green;
 	width: 25%;
 	float: right;
-	height: 5.3%;
+	height: 5%;
 	transition: all 0.5s ease-out;
 	overflow: hidden;
 
@@ -48,7 +28,7 @@ display: inline-block;
 {
 width: 80%;
 height: 30%;
-font-size: 20;
+font-size: 20px;
 padding-top: 1em;
 padding-left: 1em;
 }
@@ -57,8 +37,14 @@ padding-left: 1em;
 {
 	overflow: visible;
 }
-#pTartalom 
+#publish_button
 {
+	font-size: 1em;
+	padding: 5px 10px;
+	border-radius: 15px;
+	background-color: white;
+	margin-left: 3.5%;
+	border: none;
 }
 
 #pTartalom button 
