--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -1,29 +1,13 @@
-.navbar
+body 
 {
-	height: 10%;
-	width: 96%;
-	margin-left: 20px;
-	margin-right: 20px;
-	position: fixed;
-	top: 10;
-	background-color: red;
+	background-image: url("../Images/BG/fooldalBG.png");
+	background-repeat: round;
 }
 
-
-#spacer 
-{
-	height:100px;
-}
-
-.Nagydoboz 
-{
-	margin-left: 20px;
-	margin-right: 20px;
-	font-size: 20;
-}
 #Pfp 
 {
-	background-color: green;
+	border: 5px solid rgb(255,255,255,0.4);
+	border-radius: 20px;
 	height: 35%;
 	width: 16%;
 	margin-top: 30;
@@ -56,19 +40,6 @@
 	width: 75%;
 }
 
-table
-{
-	border: 2px solid black;
-	border-collapse: collapse;
-	width: 100%;
-	height: 100%;
-}
-
-tr td
-{
-	border: 2px solid black;
-	border-collapse: collapse;
-}
 
 #History 
 {
