--- a/Resources/CSS/fooldal.css
+++ b/Resources/CSS/fooldal.css
@@ -1,7 +1,8 @@
 body 
 {
 	background-image: url("../Images/BG/fooldalBG.png");
-	background-repeat: round;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .aukcios-felulet
@@ -31,6 +32,7 @@ body
 	width: 20%;
 	border-radius: 5px;
 	border: 3px solid rgb(43, 0, 48);
+	overflow: scroll;
 
 }
 
