--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -1,18 +1,18 @@
-body {background-color: red;}
-
-#fejlec 
+body 
 {
-	height: 10%;
-	background-color: red;
+	background-image: url("../Images/BG/fooldalBG.png");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
-
 .login 
 {
 	width:40%;
 	height: 60%;
 	margin: auto;
-	margin-top: 100px;
-	background-color: green;
+	margin-top: 10%;
+	background-color: rgb(38, 2, 64);
+	border: 2px solid white;
+	border-radius: 20px;
 	text-align: center;
 	display: block;
 	transition: 1s;
@@ -52,9 +52,16 @@ margin-top: 15px;
 	margin-top: 30px;
 	margin-bottom: 25px;
 	width: 90%;
-	font-size: 15;
-	padding: 15 20;
-	margin-left: 20;
+	font-size: 2em;
+	font-weight: bold;
+	box-shadow: 2px 10px rgb(0,0,0,0.5);
+	padding: 20px 20px;
+	margin-left: 0.1%;
+}
+
+.login input:focus 
+{
+	background-color: red;
 }
 
 #felejt_jelszo
