--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -12,20 +12,28 @@ body
 	margin-top: 10%;
 	background-color: rgb(38, 2, 64);
 	border: 2px solid white;
+	border-bottom-width: 4px;
+	border-top-width: 4px;
 	border-radius: 20px;
 	text-align: center;
 	display: block;
 	transition: 1s;
 	opacity: 1;
+
 }
 
 
 .register 
 {
-	background-color: gray;
+	background-color: rgb(38, 2, 64);
+	border: 2px solid white;
+	border-bottom-width: 4px;
+	border-top-width: 4px;
+	border-radius: 20px;
 	margin: auto;
 	width: 50%;
-	margin-top: 100px;
+	margin-top: 5%;
+	padding-top:-200px;
 	display: none;
 	opacity: 0;
 	text-align: center;
@@ -34,11 +42,14 @@ body
 
 .register input 
 {
-font-size: 20px;
-padding: 15 20;
 margin-bottom: 15px;
 width: 90%;
 margin-top: 15px;
+
+font-size: 2em;
+	font-weight: bold;
+	box-shadow: 2px 10px rgb(0,0,0,0.5);
+	padding: 20px 20px;
 }
 
 #regLable
@@ -57,11 +68,16 @@ margin-top: 15px;
 	box-shadow: 2px 10px rgb(0,0,0,0.5);
 	padding: 20px 20px;
 	margin-left: 0.1%;
+	background-color: rgb(240,240,240,0.6);
 }
 
 .login input:focus 
 {
-	background-color: red;
+	transition: 0.1s;
+	border: 2px solid black;
+	outline: none;
+	background-color: white;
+	
 }
 
 #felejt_jelszo
@@ -70,21 +86,55 @@ margin-top: 15px;
 float: right;
 width: 13em;
 height: 2em;
-font-size: 10px;
+font-size: 1em;
 text-align: center;
 margin-right: 10px;
 margin-bottom: 0px;
 margin-top: 0px;
 padding: 0;
+background-color: white;
+transition: 0.3s;
 }
+
+
 
 #loginBtn 
 {
-font-size: 25px;
+background-color: white;
+font-size: 2em;
 }
 
-#reg 
+
+.valto 
 {
-	margin-top: -20px;
 	float: right;
+	font-size: 2em;
+	margin-right: 2%; 
+	margin-top: -20px;
+	padding: 5px 10px; 
+		transition: 0.3s;
+	background-color: white;
+}
+
+.valto:hover, #felejt_jelszo:hover
+{
+	transition: 0.3s;
+scale:110% 110%;
+}
+
+#registerId p 
+{
+	transition: 0.3s;
+	font-size: 4em;
+	color: white;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+
+#registerId p:hover
+{
+	transition: 0.3s;
+	scale: 120% 120%;
+	color: rgb(255,215,0);
 }
