--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -52,6 +52,10 @@ font-size: 2em;
 	padding: 20px 20px;
 }
 
+.register input:hover 
+{
+	background-color: rgb(201,201,201);
+}
 #regLable
 {
 	color:red;
@@ -102,17 +106,32 @@ transition: 0.3s;
 {
 background-color: white;
 font-size: 2em;
+transition: 0.3s;
 }
 
+#regBtn 
+{
+	margin-top: 5%;
+	width: 80%;
+	background-color: white;
+	font-size: 2em;
+	transition: 0.3s;
+
+}
+
+#loginBtn:hover, #regBtn:hover
+{
+background-color: rgb(201,201,201);
+}
 
 .valto 
 {
 	float: right;
-	font-size: 2em;
+	font-size: 1.5em;
 	margin-right: 2%; 
 	margin-top: -20px;
 	padding: 5px 10px; 
-		transition: 0.3s;
+	transition: 0.3s;
 	background-color: white;
 }
 
@@ -138,3 +157,4 @@ scale:110% 110%;
 	scale: 120% 120%;
 	color: rgb(255,215,0);
 }
+
