--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -1,50 +1,90 @@
 body 
 {
 	background-image: url("../Images/BG/fooldalBG.png");
-	background-repeat: round;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 #Pfp 
 {
-	border: 5px solid rgb(255,255,255,0.4);
 	border-radius: 20px;
 	height: 35%;
 	width: 16%;
-	margin-top: 30;
+	margin-top: -3%;
+	margin-left: 2%;
+	margin-bottom: 5%;
+	text-align: center;
 }
 
-#Pfp button
-{
-	float: right;
-	margin-top: 200;
+#Pfp img {
+
+	width: 100%;
+	height: 100%;
+	border-radius: 50px;
+	border: 2px solid rgb(255, 255, 255,0.6);
+	border-top-width: 3px;
+	border-bottom-width: 3px;
+	background-color: rgb(255,255,255,0.1);
+	margin-bottom: 5%;
+
 }
+
 
 .inline 
 {
 	display: inline-block;
-	vertical-align: middle;
 }
-
 
 #adatok 
 {
-	background-color: blue;
+	background-color: rgb(210,210,210,0.5);
 	width: 50%;
-	padding-left: 20;
+	padding: 0px 20px;
+	padding-bottom: 20px;
+	margin-left: 2%;
+	color: white;
+	border: 2px solid rgb(201, 201, 201,0.2);
 }
 .Raktar
 {
-	margin-top: 30;
-	background-color: blue;
+	margin-left: 1%;
+	background-color: rgb(201,201,201,0.2);
 	height: 34%;
+	border: 1px solid white;
 	width: 75%;
 }
 
 
+.Raktar iframe {width: 100%; height: 100%; border: none;}
 #History 
 {
-	background-color: yellow;
+	background-color: rgb(221, 255, 0,0.3);
+	color: white;
+	font-size: 2em;
+	border: 2px solid rgb(255,255,255,0.3);
 	height: 77%;
 	width: 20.5%;
 	float: right;
+}
+#upload 
+{
+	float: right;
+}
+#browse 
+{
+	float: left;
+	width: 30%;
+}
+
+.feliratok
+{
+	font-size: 2.3em;
+	margin-right: 2%;
+}
+
+#label
+{
+	text-transform: uppercase;
+	font-size: 2.5em;
+	font-weight: bold;
 }
