--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -1,11 +1,11 @@
-.chatbox 
-{
-	background-color: blue;
-	width: 50%;
-	height: 80%;
-	margin-right: -10%;
-}
 
+body 
+{
+	background-image: url("../Images/BG/fooldalBG.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
 
 .Nagydoboz 
 {
@@ -14,12 +14,18 @@
 
 .publish
 {
-	background-color: green;
+	background-color: rgb(83,27,147,0.8);
 	width: 25%;
 	float: right;
 	height: 5%;
 	transition: all 0.5s ease-out;
 	overflow: hidden;
+	position: fixed;
+	top: 25%;
+	float: right;
+	margin-right: 0;
+	left: 75%;
+	text-align: center;
 
 }
 
@@ -53,3 +59,95 @@ padding-left: 1em;
 	padding: 10 5;
 	
 }
+#post_container 
+{
+	background-color: rgb(201,201,201,0.3);
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	display: block;
+	text-align: center;
+	border: 2px solid black;
+}
+
+#post_container p
+{
+text-align: left;
+max-height: 50%;
+height: fit-content;
+}
+.post-text 
+{
+	font-size: 1.5em;
+	padding-left: 1%;
+	margin-bottom: 10%;
+	color: rgb(255,255,255,0.9);
+	
+}
+
+.post-op
+{
+color: white;
+font-weight: bold;
+font-size: 1.5em;
+padding: 5 10;
+margin-top: 2%;
+width: fit-content;
+}
+
+.text-img 
+{
+	border: 2px solid black;
+	margin-left: auto;
+	margin-right: auto;
+	width: 98%;
+	background-color: rgb(255,255,255,0.1);
+	overflow: scroll;
+	word-break: break-all;
+
+}
+
+.post img
+{
+	width: 75%;
+	margin-bottom: 5%;
+}
+
+.post 
+{
+	border: 2px solid black;
+	border-bottom-width: 5px;
+
+
+}
+
+.post button
+{
+	font-size: 1.4em;
+	margin-bottom: 2%;
+	border: 2px solid black;
+	background-color: white;
+	margin-top: 5%;
+}
+
+.post button:hover 
+{
+	font-size: 1.45em;
+	background-color: rgb(255,255,255,0.9);
+}
+.post-likes 
+{
+margin-left: 4%;
+}
+
+.post-date 
+{
+float: left;
+margin-top: -7%;
+margin-left: 2%;
+font-style: italic;
+color:grey;
+font-size: 1.4em;
+}
+
+
