--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -14,49 +14,50 @@ body
 
 .publish
 {
-	background-color: rgb(83,27,147,0.8);
-	width: 25%;
-	float: right;
-	height: 5%;
+	background-color: rgb(83,27,147,0.5);
+	width: 16.5%;
+	height: 3.5em;
 	transition: all 0.5s ease-out;
 	overflow: hidden;
 	position: fixed;
 	top: 25%;
 	float: right;
-	margin-right: 0;
-	left: 75%;
+	left: 80%;
+	border: 2px solid rgb(83,27,147,1);
 	text-align: center;
 
 }
-
-
+#browse 
+{
+margin: 5%;
+font-family: title;
+font-size: 1em;
+}
 .publish textarea 
 {
 width: 80%;
 height: 30%;
-font-size: 20px;
-padding-top: 1em;
-padding-left: 1em;1
+font-size: 1em;
+padding-top: 0.5em;
+padding-left: 0.5em;
 }
 
-.publish button
-{
-	overflow: visible;
-}
 #publish_button
 {
-	font-size: 1em;
+	font-size: 1.5em;
 	padding: 5px 10px;
-	border-radius: 15px;
+	margin-top: 2%;
+	margin-bottom: 2%;
 	background-color: white;
 	margin-left: 3.5%;
-	border: none;
+	border: 2px solid black;
 }
 
 #pTartalom button 
 {
-	font-size: 20;
-	padding: 10 5;
+	font-size: 1.5em;
+	padding: 5px 10px;
+	border: 2px solid black;
 	
 }
 #post_container 
@@ -104,6 +105,7 @@ width: fit-content;
 	background-color: rgb(255,255,255,0.1);
 	overflow: auto;
 	word-break: break-all;
+	max-height: 60%;
 
 }
 
