továbbra is forum cuc megint ujra

--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -16,7 +16,7 @@ body
 {
 	background-color: rgb(83,27,147,0.5);
 	width: 16.5%;
-	height: 3.5em;
+	height: 6.3%;
 	transition: all 0.5s ease-out;
 	overflow: hidden;
 	position: fixed;
