--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -1,3 +1,4 @@
+
 body 
 {
 	background-image: url("../Images/BG/fooldalBG.png");
@@ -78,10 +79,15 @@ font-weight: bold;
 	height: 34%;
 	border: 1px solid white;
 	width: 75%;
+
 }
 
 
-.Raktar iframe {width: 100%; height: 100%; border: none;}
+.Raktar iframe 
+{
+	width: 100%; height: 100%; border: none;
+
+}
 #History 
 {
 	background-color: rgb(221, 255, 0,0.3);
