--- a/Resources/CSS/inventory.css
+++ b/Resources/CSS/inventory.css
@@ -3,17 +3,35 @@ body
 		overflow: hidden;
 }
 
-#items-container{
-	
-	width:50%;
+.Item 
+{
 	display: inline-block;
-	float:left;
-	text-align: center;
+	width: 20%;
+	margin-right: 2%;
+	margin-bottom: 2%;
+	border: 2px solid grey;
+	border-radius: 25px;
+
+}
+
+.Item:hover{
+	transition: 0.2s;
+	background-color: rgb(201,201,201,0.7);
+	scale: 110% 110%;
+}
+
+#items-container{
+display: inline-block;
+overflow:auto;
+height: 100%;
+text-align: center;
+width: 49%;
 }
 
 #info-container{
 	float:right;
 	width:49%;
+	height: 100%;
 	border: 4px solid black;
 	display: inline-block;
 	background-color: rgb(220,220,220,0.2);
@@ -29,15 +47,8 @@ body
 }
 
 .Item_IMG{
-	width: 40%;
-	max-height: 50%;
-	margin-right: 5%;
-	border: 2px solid grey;
-	border-radius: 50px;
-}
-#info_image{
-	
-    width: 40%;
+	width: 100%;
+
 }
 
 #info-OG_owner
@@ -52,6 +63,7 @@ body
 	text-align: center;
 	font-size: 0.7em;
 	padding: 5px 6px;
+
 
 }
 
@@ -92,11 +104,18 @@ table{
 	margin-top: 2%;
 	text-align: justify;
 	color: rgb(255,255,255,0.9);
-	background-color: rgb(201,201,201,0.5);
 	padding: 10px;
+	height: 20%;
+	background-color: rgb(201,201,201,0.5);
+	overflow: auto;
 }
 
 #info-name 
 {
 	font-size: 2em;
+}
+
+#info_image 
+{
+	width: 30%;
 }
