--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -76,16 +76,16 @@ font-weight: bold;
 {
 	margin-left: 1%;
 	background-color: rgb(201,201,201,0.2);
-	height: 34%;
+	height: 80%;
 	border: 1px solid white;
 	width: 75%;
-
+	overflow: auto;
 }
 
 
 .Raktar iframe 
 {
-	width: 100%; height: 100%; border: none;
+	width: 100%; height: 100%; border: none; 
 
 }
 #History 
