--- a/Resources/CSS/sajat_aukcio.css
+++ b/Resources/CSS/sajat_aukcio.css
@@ -6,82 +6,29 @@ body
 	overflow: hidden;
 }
 
-.cellak td 
-{
-	width: 10%;
-	height: 5%;
-	border: 3px solid black;
-	background-color: rgb(201,201,201,0.4);
-}
-
-
-#valaszto p 
-{
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 2em;
-	color: white;
-	background-color: transparent;
-	margin-bottom: -1%;
-
-}
-
-#cim 
-{
-	height: 0%;
-}
-
-
-#oldal 
-{
-	float: right;
-}
-
-#kuldes 
-{
-	font-size: 1.5em;
-	background-color: transparent;
-	border: 2px solid black;
-	padding: 0.3em 2em;
-	margin-top: -2%;
-	background-color: grey;
-	
-}
-
-.also td 
-{
-	text-align: center;
-	border: none;
-	background-color: transparent;
-}
-
-#valaszto table
-{
-	margin-left: auto;
-	margin-right: auto;
-width: 65%;
-height: 95%;
-}
-
 .menusor-spacer 
 {
-	height: 10%;
+	height: 20%;
 }
-
-#oldal 
-{
-	font-size: 1.5em;
-	margin-top: -5%;
-}
-
-#next 
-{
-	font-size: 0.7em;
-	background-color: rgb(180,220,180,0.4);
-	border: 2px solid black;
-}
-
-#inline 
+.aukcio
 {
 	display: inline-block;
+	background-color: rgb(201,201,201,0.5);
+	width: 40%;
+	height: 50%;
+	text-align: center;
 }
+.aukcio button 
+{
+	margin-top: 18%;
+	font-size: 2em;
+
+}
+
+#aukcio-container 
+{
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
