--- a/Resources/CSS/sajat_aukcio.css
+++ b/Resources/CSS/sajat_aukcio.css
@@ -1,9 +1,6 @@
 body 
 {
-	background-image: url("../Images/BG/profilBG.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	overflow: hidden;
+overflow: hidden;
 }
 
 .menusor-spacer 
@@ -13,22 +10,71 @@ body
 .aukcio
 {
 	display: inline-block;
-	background-color: rgb(201,201,201,0.5);
+	background-color: rgb(201,201,201,0.3);
 	width: 40%;
-	height: 50%;
-	text-align: center;
+	
+}
+#aukcio-info
+{
+	font-size: 1.5em;
+	overflow: auto;
+	text-align: justify;
+	padding: 0.6em 1em;
+	height: 30%;
+	color: white;;
+	border: 2px solid rgb(0,0,0);
+	border-top-width: 3px;
+	background-color: rgb(200,200,200,0.15);
+	margin-left: 0.3em;
+	margin-right: 0.3em;
+
 }
 .aukcio button 
 {
-	margin-top: 18%;
-	font-size: 2em;
+	font-size: 2.5em;
+	text-decoration: underline;
+	position: relative;
+	padding: 0.2em 1em;
+	margin-top: 0.2em;
+	margin-bottom: 0.7em;
+	border: none;
+	background-color: transparent;
+	color: white;
 
+}
+
+.aukcio button:hover 
+{
+		color: rgb(255,215,0);
+		background-color: transparent;
+		scale: 110% 110%;
+		cursor: pointer;
+
+}
+
+#aukcio-cim
+{
+	margin-left: 0.1em;
+	margin-right: 0.1em;
+	font-size: 2.5em;
+	border-bottom: 2px solid white;
+	color: white;
+	padding: 0.1em 0em;
+	margin-top: 3%;
+	text-transform: uppercase;
 }
 
 #aukcio-container 
 {
-	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%;
+	text-align: center;
+	height: 80%;
 }
+
+
+iframe 
+{
+border: 2ps solid black;
+}
+
 
