--- a/Resources/CSS/egyenleg.css
+++ b/Resources/CSS/egyenleg.css
@@ -27,9 +27,8 @@
 	border: 2px solid white;
 	width: 40%;
 	margin-top: 3%;
-	overflow: auto;
 	display: inline-block;
-		float: left;
+	float: left;
 }
 
 #munka-rendszer 
@@ -41,6 +40,7 @@
 	overflow: auto;
 	text-align: justify;
 	display: flex;
+	overflow: auto;
 }
 
 #munka-rendszer p
@@ -79,9 +79,11 @@ content: " ";
 #penz::before {content: " ";}
 #timer-div button 
 {
-	color: white; font-size: 1em;
-	padding: 0.3em 2em;
-	margin-top: 0.3em;
+	color: white; 
+	font-size: 1em;
+	padding: 3% 20%;
+	margin-top: 3%;
+	width: fit-content;
 	background-color: transparent;
 	border: none;
 	text-transform: uppercase;
@@ -103,7 +105,7 @@ content: " ";
 
 #tier-container 
 {
-	margin-top: 5em;
+	margin-top: 3%;
 	width: 45%;
 	height: 55%;
 	border: 3px solid white;
@@ -135,7 +137,7 @@ content: " ";
 
 .tier-img-container img
 {
-	height: 9.8em;
+	max-height: 10em;
 
 }
 .penz-container
@@ -153,18 +155,20 @@ content: " ";
 
 #tier-text
 {
-	font-size: 2em;
+	font-size: 1em;
 	width: fit-content;
 	display: inline-block;
-	position: relative;
 	left: 23.5%;
-	top: 2em;
+
 
 }
 
-#tier-text a
+#tier-text
 {
 		color: white;
 		text-transform: uppercase;
-		font-size: 2em;
+		font-size: 3em;
+		position: relative;
+		margin-bottom: -2em;
+		margin-left: 0.5em;
 }
