--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -5,6 +5,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 2;
+	max-height: 10%;
 
 }
 
@@ -15,28 +16,30 @@
 }
 .kep img
 {
-width: 5em;
+height: 7em;
 margin-top:-15%;
 }
 
 .gombok 
 {
 	float: right;
-	margin-right: 2%;
-	margin-top: 0.3%;
+	margin-right: 3%;
+	margin-top:1%;
+	text-align: center;
 
 
 }
 
 .menu-gombok
 {
-	font-size: 2em;
+	font-size: 200%;
 	font-family: title;
+	display: inline-block;
 	text-align: center;
 	margin-left: 0.5em;
 	background-color: rgb(30,30,30,0.1);
 	padding: 2 10;
-	box-shadow: 10px 5px black;
+	box-shadow: 5px 5px black;
 
 }
 .menu-gombok-containter
@@ -63,12 +66,55 @@ a
 }
 .gombok button 
 {
-	background: none;
-	background-color: rgb(50,50,50,0.3);
+	margin-left: 1em;
+	font-size: 2em;
+	background-color: rgb(210,210,210);
+	border: 2px solid black;
 }
 
-
+.gombok button:hover 
+{
+	background-color: rgb(50,50,50,0.3);
+}
 .menusor-spacer 
 {
 	height: 20%;
 }
+
+#drop-btn {display: none;}
+
+
+@media screen and (max-width: 995px) 
+{
+	.menusor
+	{
+		display: none;
+		height: 100%;
+		height: fit-content;
+		max-height: none;
+		margin: 0;
+		text-align: center,
+
+	}
+
+	.menu-gombok
+	{
+		display: block;
+		width: 100%;
+		font-size: 3em;
+		background-size: white;
+		box-shadow: none;
+		padding: 0.5em;
+		margin: 0;
+		z-index: 1;
+	}
+	.gombok  {float: none; width: 100%; margin:0 0 0 0; padding: 0; }
+	.menu-gombok:hover {background-color: grey; box-shadow: none;}
+	.kep img{display: none;}
+
+	#drop-btn {display: block; font-size: 5em; position: fixed; z-index: 200; background-color: transparent; color: white; border: none;}
+
+	
+
+}
+
