--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -5,7 +5,7 @@
 	position: fixed;
 	z-index: 10;
 	top: 2;
-	max-height: 10%;
+	display: block;
 
 }
 
@@ -16,7 +16,7 @@
 }
 .kep img
 {
-height: 7em;
+height: 5em;
 margin-top:-15%;
 }
 
@@ -24,7 +24,7 @@ margin-top:-15%;
 {
 	float: right;
 	margin-right: 3%;
-	margin-top:1%;
+	margin-top: 0.5%;
 	text-align: center;
 
 
@@ -84,16 +84,17 @@ a
 #drop-btn {display: none;}
 
 
+
 @media screen and (max-width: 995px) 
 {
-	.menusor
+	.drop
 	{
 		display: none;
 		height: 100%;
 		height: fit-content;
 		max-height: none;
 		margin: 0;
-		text-align: center,
+		text-align: center;
 
 	}
 
