--- a/Resources/CSS/auction.css
+++ b/Resources/CSS/auction.css
@@ -23,8 +23,8 @@ body{
 
 .screen p{
 	color:red;
-	width:80%;
-	height:20%;
+	width:80vw;
+	height:20vw;
 	margin:50% auto 0% auto;
 	text-align:center;
 	font-size:5vw;
