--- a/Resources/CSS/Chat.css
+++ b/Resources/CSS/Chat.css
@@ -8,7 +8,6 @@ input
 
 #name
 {
-	text-transform: uppercase;
 	font-size: 1.5em;
 	font-weight: bold;
 }
@@ -16,14 +15,13 @@ input
 
 #id
 {
-	text-transform: uppercase;
 	font-size: 1.5em;
+	color: gray;
 }
 
 
 #textMessage
 {
-	text-transform: uppercase;
 	font-size: 1.5em;
 	color: white;
 }
@@ -31,4 +29,10 @@ input
 #Chatbox 
 {
 	overflow: scroll;
+}
+
+@media screen and (min-width: 300px) 
+{
+	input {width: 100%;}
+	body,input {font-size: 1.1em;}
 }
