--- a/Resources/CSS/egyenleg.css
+++ b/Resources/CSS/egyenleg.css
@@ -3,17 +3,17 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: fit-content;
-	margin-top: -2em;
+	margin-top: -6vw;
 }
 
 #egyenleg-div, #egyenleg
 {
 
 	color: green;
-	font-size: 2em;
+	font-size: 5vw;
 }
 
-.penz {color: white; font-size: 2em;}
+.penz {color: white; font-size: 5vw;}
 .penz::after 
 {content: "¢";}
 .penz::before 
@@ -23,7 +23,7 @@
 #munka-container 
 {
 	margin-left: 1.5em;
-	height: 50%;
+	height: 27vw;
 	border: 2px solid white;
 	width: 40%;
 	margin-top: 3%;
@@ -45,7 +45,7 @@
 
 #munka-rendszer p
 {
-	font-size: 1.5em;
+	font-size: 1.5vw;
 	color: white;
 	margin: 0 0.45em;
 }
@@ -64,9 +64,8 @@
 }
 
 
-#timer-div {width: 183.5%;color: white; font-size: 2em;text-align: center;}
+#timer-div {width: 183.5%;color: white; font-size: 2vw;text-align: center;}
 #timer-belso-div {background-color: rgb(201,201,201,0.3);}
-
 #timer::before
 {
 content: " ";
@@ -80,7 +79,7 @@ content: " ";
 #timer-div button 
 {
 	color: white; 
-	font-size: 1em;
+	font-size: 2.5vw;
 	padding: 3% 20%;
 	margin-top: 3%;
 	width: fit-content;
@@ -106,13 +105,14 @@ content: " ";
 #tier-container 
 {
 	margin-top: 3%;
-	width: 45%;
-	height: 55%;
+	width: 45vw;
+	max-height: 40vw;
 	border: 3px solid white;
 	float: right;
 		overflow: auto;
 		text-align: center;
 		margin-right: 3em;
+		margin-top: 4.2vw;
 }
 
 .tier-img-container 
@@ -122,7 +122,7 @@ content: " ";
 	text-align: center;
 	border: 3px solid black;
 	border-bottom: none;
-	margin:1em;
+	margin:1vw;
 	display: inline-block;
 	background-color: rgb(201,201,201,0.4);
 
@@ -137,38 +137,88 @@ content: " ";
 
 .tier-img-container img
 {
-	max-height: 10em;
-
-}
-.penz-container
-{
-	width: 100%;
-	margin-left: -0.2em;
-	border: 3px solid black;
+	max-height: 8vw;
 
 }
 .penz-container p
 {
-	margin: 0em;
+	width: 100%;
+	font-size: 2vw;
+	border-top: 4px solid black;
+		margin: 0;
 
 }
 
-#tier-text
+#kulso-tier-container
 {
-	font-size: 1em;
-	width: fit-content;
 	display: inline-block;
-	left: 23.5%;
-
+	text-align: center;
+	height: fit-content;
+	position: absolute;
+	margin-top: -4vw;
+	margin-left: -9vw;
+	
 
 }
 
-#tier-text
+#kulso-tier-container a 
 {
-		color: white;
-		text-transform: uppercase;
-		font-size: 3em;
-		position: relative;
-		margin-bottom: -2em;
-		margin-left: 0.5em;
+	color: white;
+	font-size: 3vw;
+	text-transform: uppercase;
+}
+
+@media screen and (max-width: 1000px) 
+{
+	
+#munka-container, #tier-container
+{
+	display: block; float: none;
+
+}
+
+#egyenleg-div
+{
+	margin-top: -17vw;
+}
+#munka-container 
+{
+		scale: 150% 150%;
+		margin-left: 29vw;
+		margin-top: 10vw;
+}
+
+#tier-container 
+{
+		scale: 150% 150%;
+		margin-left: 26vw;
+		margin-top: 30vw;
+		max-height: 40vw;
+		overflow: visible;
+}
+
+#kulso-tier-container 
+{
+	
+	left: 0vw;
+	margin-top: -3em;
+	margin-left: 13vw;
+	overflow: visible;
+}
+
+#timig-container 
+{
+	width: fit-content;
+	height: 40vw;
+	overflow: auto;
+}
+
+.tier-img-container img
+{
+	max-height: 10vw;
+
+}
+
+
+
 }
