--- a/Resources/CSS/egyenleg.css
+++ b/Resources/CSS/egyenleg.css
@@ -3,13 +3,13 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: fit-content;
-	margin-top: -6vw;
+	margin-bottom: 2vw;
 }
 .menusor-spacer 
 {
-	max-height: 15vw;
-	min-height: 15vw;
+	height: 6vw;
 }
+
 #egyenleg-div, #egyenleg
 {
 
