--- a/Resources/CSS/egyenleg.css
+++ b/Resources/CSS/egyenleg.css
@@ -3,11 +3,11 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: fit-content;
-	margin-bottom: 2vw;
+	margin-bottom: 0.4vw;
 }
 .menusor-spacer 
 {
-	height: 6vw;
+	height: 5vw;
 }
 
 #egyenleg-div, #egyenleg
@@ -26,13 +26,13 @@
 #work {	white-space: nowrap;}
 #munka-container 
 {
-	margin-left: 1.5em;
 	height: 27vw;
 	border: 2px solid white;
-	width: 40%;
-	margin-top: 3%;
+	width: 50vw;
+	margin-top: 3.6vw;
 	display: inline-block;
 	float: left;
+	scale: 90% 90%;
 }
 
 #munka-rendszer 
@@ -172,13 +172,13 @@ content: " ";
 	text-transform: uppercase;
 }
 
-@media screen and (max-width: 1020px) 
+@media screen and (max-width: 1480px) 
 {
 
 .menusor-spacer 
 {
-	max-height: 20vw;
-	height: 20vw;
+	max-height: 30vw;
+	height: 23vw;
 }
 
 
@@ -195,7 +195,7 @@ content: " ";
 #munka-container 
 {
 		scale: 150% 150%;
-		margin-left: 29vw;
+		margin-left: 24vw;
 		margin-top: 10vw;
 }
 
