--- a/Resources/CSS/Chat.css
+++ b/Resources/CSS/Chat.css
@@ -24,11 +24,28 @@ input
 {
 	font-size: 1.5em;
 	color: white;
+	line-break: anywhere;
 }
 
 #Chatbox 
 {
-	overflow: scroll;
+	overflow: auto;
+	height: 87vh;
+	 -ms-overflow-style: none;  
+		scrollbar-width: none;  
+}
+
+#Chatbox ::-webkit-scrollbar {
+  display: none;
+}
+#Messenger{
+	
+	font-size:5vh;
+	position: absolute;
+    top: 89%;
+    height: 11%;
+    width: 100%;
+    left: 0px;
 }
 
 @media screen and (min-width: 300px) 
