--- a/Resources/CSS/forum.css
+++ b/Resources/CSS/forum.css
@@ -142,4 +142,64 @@ color:grey;
 font-size: 1.4em;
 }
 
+@media screen and (max-width: 995px) 
+{
+	
+	.menusor-spacer {
+    height: 8vw !important;
+}
+
+#pTartalom button {
+    font-size: 2.5vh;
+    padding: 5px 10px;
+    border: 2px solid black;
+}
+
+	#browse {
+    margin: 5%;
+    font-family: title;
+    font-size: 2vh;
+}
+	.publish textarea {
+    width: 80%;
+    height: 62%;
+    font-size: 5vw;
+    padding-top: 0.5em;
+    padding-left: 0.5em;
+}
+	
+	#publish_button {
+    font-size: 2.5vh;
+    padding: 5px 10px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: white;
+    margin-left: 3.5%;
+    border: 2px solid black;
+}
+	
+	#post_container {
+    background-color: rgb(201,201,201,0.3);
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    display: block;
+    text-align: center;
+    border: 2px solid black;
+		}
+	.publish {
+    background-color: rgb(83,27,147,0.95);
+    width: 100%;
+    height: 7vw;
+    transition: all 0.5s ease-out;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    float: right;
+    left: 0;
+    border: 2px solid rgb(83,27,147,1);
+    text-align: center;
+}
+	
+}
 
