--- a/Resources/CSS/sajat_aukcio.css
+++ b/Resources/CSS/sajat_aukcio.css
@@ -3,9 +3,8 @@ body
 overflow: hidden;
 }
 
-.menusor-spacer 
-{
-	height: 20%;
+.menusor-spacer {
+    height: 15%;
 }
 .aukcio
 {
@@ -34,7 +33,7 @@ overflow: hidden;
 }
 .aukcio button 
 {
-	font-size: 2.5em;
+	font-size: 2.4vw;
 	text-decoration: underline;
 	position: relative;
 	padding: 0.2em 1em;
@@ -75,15 +74,56 @@ overflow: hidden;
 }
 #raktar-div 
 {
-height: 100%;
+height: 90%;
 width: 80%;
-margin: 0 auto;
+margin: 1% auto;
 } 
 
-#raktar 
-{
-	height: 100%;
-	width: 100%;
+#raktar {
+    height: 85%;
+    width: 100%;
+}
+#host{
+	white-space: nowrap;
+}
+.rejected{
+	
+	
 }
 
-
+@media screen and (max-width: 995px) 
+{
+	#raktar-div{
+    height: 100%;
+    width: 100%;
+	}
+	
+	body{
+		
+		overflow:auto;
+	}
+	
+	.aukcio {
+    display: inline-block;
+    background-color: rgb(201,201,201,0.3);
+    width: 100%;
+	margin-bottom: 3vh;
+	}
+	
+	.aukcio button {
+    font-size: 9.4vw;
+    text-decoration: underline;
+    position: relative;
+    padding: 0.2em 1em;
+    margin-top: 0.2em;
+    margin-bottom: 0.7em;
+    border: none;
+    background-color: transparent;
+    color: white;
+}
+#host{
+	white-space: unset;
+}
+	
+	
+}
