--- a/Resources/CSS/profil.css
+++ b/Resources/CSS/profil.css
@@ -7,14 +7,14 @@ body
 }
 
 #Pfp img {
-    width: auto;
-    height: 31vh;
+    max-height: 20vw;
+    min-height: 20vw;
     border-radius: 50px;
     border: 2px solid rgb(255, 255, 255,0.6);
     border-top-width: 3px;
     border-bottom-width: 3px;
     background-color: rgb(255,255,255,0.1);
-    margin-bottom: 5%;
+    margin-bottom: 2vw;
 }
 
 
@@ -23,28 +23,31 @@ body
 {
 	display: inline-block;
 	text-align: center;
+
 }
 
-.inline form input{
+.inline input{
 	
-	font-size:2vh;
-}
+	font-size:2.6vh;
+    width: 10vw;
+    margin-left: 1vw;
+    margin-bottom: 1vw;
+   }
 
 #adatok {
     background-color: rgb(210,210,210,0.5);
-    width: 98vh;
-    padding: 0px 2vh;
-    padding-top: 2vh;
-    margin-left: 4vh;
+    width: 40vw;
+    padding: 0px 2vw;
+    padding-top: 2vw;
+    margin-left: 2vw;
     color: white;
     border: 2px solid rgb(201, 201, 201,0.2);
     text-align: left;
-	font-size: 2vh;
 }
 
 #adatok button 
 {
-	font-size: 1.5em;
+	font-size: 2.5vw;
 	background-color: transparent;
 	border: none;
 	color:red;
@@ -59,7 +62,7 @@ body
 }
 #logout 
 {
-	font-size: 1.5em;
+	font-size: 2.5vw;
 	color: cyan;
 }
 
@@ -71,7 +74,7 @@ font-weight: bold;
 {
 	margin-left: 1%;
 	background-color: rgb(201,201,201,0.2);
-	height: 80%;
+    max-height: 32vw;
 	border: 1px solid white;
 	width: 75%;
 	overflow: auto;
@@ -89,7 +92,8 @@ font-weight: bold;
 	color: white;
 	font-size: 2em;
 	border: 2px solid rgb(255,255,255,0.3);
-	height: 77%;
+    height: 58vw;
+    max-height: 58vw;
 	width: 20.5%;
 	float: right;
 }
@@ -100,22 +104,21 @@ font-weight: bold;
 #browse 
 {
 	float: left;
-	width: 100%;
 }
 
 .feliratok
 {
-	font-size: 2.3em;
-	margin-right: 2%;
+	font-size: 3vw;
+    margin-left: 0.5vw;
 }
 
 #label {
     text-transform: uppercase;
-    font-size: 6.5vh;
+    font-size: 3.5vw;
     font-weight: bold;
 }
 
-@media screen and (max-width: 995px) 
+@media screen and (max-width: 1000px) 
 {
 	body{
 		
@@ -125,76 +128,83 @@ font-weight: bold;
 	
 	
 	#Pfp img {
-		
-	width: 116vw;
-    height: auto;
+    height: 60vw;
+    max-height: none;
     border-radius: 50px;
     border: 2px solid rgb(255, 255, 255,0.6);
     border-top-width: 3px;
     border-bottom-width: 3px;
     background-color: rgb(255,255,255,0.1);
-    margin-bottom: 5%;
+    margin-top: -10vw;
 }
 
 #Pfp{
-	width:100%;
-	
+margin-left: 0;
+  margin: 0;
+  text-align: center;
+  width: 65%;
+float: none;
 }
 
 #upload {
     float: right;
 }
 
-.inline form input {
-    font-size: 7vw;
+.inline input {
+    text-align: center;
+    font-size:4vh;
+    width: 100%;
+    padding:auto;
+    margin-left: 0vw;
+    margin-bottom: 3vw;
+    margin-top: 3vw;
+
 }
 
 #adatok {
-    background-color: rgb(210,210,210,0.5);
-    width: 101%;
-    
-    padding-top: 2vh ;
-
+    width: 100vw;
     margin-left: -2vw;
-    color: white;
-    border: 2px solid rgb(201, 201, 201,0.2);
-    text-align: left;
-    font-size: 4vw;
 }
+
+
+#adatok button, #logout {font-size: 3vw;}
+#adatok button {margin-left: 0;}
+
 #label {
     text-transform: uppercase;
     font-size: 6.5vw;
     font-weight: bold;
+}
+
+.feliratok 
+{    font-size: 6.5vw;
+
 }
 #History {
     background-color: rgb(221, 255, 0,0.3);
     color: white;
     font-size: 2em;
     border: 2px solid rgb(255,255,255,0.3);
-    height: auto;
-    width: 153vw;
-    float: right;
+    height: 45vw;
+    float:left;
+    width: 101vw;
+    margin-left:-2vw;
 }
 
 
 
 .Raktar {
-    margin-left: -1vw;
     background-color: rgb(201,201,201,0.2);
-    height: 100%;
+    height: 100vw;
     border: 1px solid white;
-    width: 154vw;
+    width: 101vw;
+    margin-left: -2vw;
     overflow: auto;
 }
 .Raktar iframe {
-    margin-right: auto;
-    width: 101vw;
-    height: 100%;
-    margin-left: 24vw;
-    display: block;
+    width: 100vw;
+    height: 100vw;
     border: none;
-    transform-origin: 50% 0%;
-    scale: 161% 161%;
 }
 
 
