--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -77,7 +77,7 @@ a
 }
 .menusor-spacer 
 {
-	height: 20%;
+	height: 10vw;
 }
 
 #drop-btn {display: none; font-size: 5em; position: fixed; z-index: 200; background-color: transparent; color: black; border: none;}
@@ -111,7 +111,7 @@ a
 		max-height: none;
 		margin: 0;
 		text-align: center;
-		animation-iteration-count:
+		animation-iteration-count:0;
 
 	}
 
