--- a/Resources/CSS/inventory.css
+++ b/Resources/CSS/inventory.css
@@ -54,6 +54,7 @@ padding-top: 1em;
 #info-container{
 	float:right;
 	width: 49vw;
+	
     height: 100vh;
 	border: 0.2vw solid black;
 	display: inline-block;
@@ -178,13 +179,14 @@ table{
 	
 	#items-container {
     display: block;
-    overflow: hidden;
+    overflow: auto;
     height: 67vh;
     text-align: center;
-    width: 70vw;
+    width: 100vw;
     padding-top: 1em;
     position: absolute;
     margin-top: 67vh;
+	
 	}
 #info-container {
     width: 95vw;
