--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -28,7 +28,9 @@ margin-top:-15%;
 
 
 }
-
+.menusor-spacer-fooldal {
+    height: 7vw;
+}
 .menu-gombok
 {
 	font-size: 200%;
@@ -39,6 +41,7 @@ margin-top:-15%;
 	background-color: rgb(30,30,30,0.1);
 	padding: 2 10;
 	box-shadow: 5px 5px black;
+	padding: 0.3vw 0.7vw;
 
 }
 .menu-gombok-containter
@@ -84,6 +87,7 @@ a
 
 @media screen and (min-width: 995px) 
 {
+	font-size: 0.9vw;
 		.inactive, .active {display: block;}
 }
 
