Auction folytatás, és kisebb fix-ek

--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -16,8 +16,17 @@
 .kep img
 {
 height: 5em;
-margin-top:-15%;
+
 }
+
+
+#musicbtn{
+	height: 3em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+	
+}
+
 
 .gombok 
 {
