--- a/Resources/CSS/navbar.css
+++ b/Resources/CSS/navbar.css
@@ -37,9 +37,6 @@ height: 5em;
 
 
 }
-.menusor-spacer-fooldal {
-    height: 7vw;
-}
 .menu-gombok
 {
 	font-size: 200%;
@@ -89,7 +86,7 @@ a
 }
 .menusor-spacer 
 {
-	height: 10vw;
+	height: 20vh;
 }
 
 #drop-btn {display: none; font-size: 5em; position: fixed; z-index: 200; background-color: transparent; color: black; border: none;}
