--- a/Resources/CSS/belepes.css
+++ b/Resources/CSS/belepes.css
@@ -1,7 +1,6 @@
 .login 
 {
-	width:40%;
-	height: 60vh;
+	width:40vw;
 	margin: auto;
 	margin-top: 10%;
 	background-color: rgb(38, 2, 64);
@@ -11,7 +10,6 @@
 	border-radius: 20px;
 	text-align: center;
 	display: block;
-	transition: 1s;
 	opacity: 1;
 
 }
@@ -37,9 +35,9 @@
 .register input 
 {
 margin-bottom: 15px;
-width: 90%;
+width: 40vw;
+max-width: 90%;
 margin-top: 15px;
-
 font-size: 2em;
 	font-weight: bold;
 	box-shadow: 2px 10px rgb(0,0,0,0.5);
@@ -56,16 +54,15 @@ font-size: 2em;
 	margin-top: -200px;
 }
 
-.login input
+.login input, #loginBtn 
 {
-	margin-top: 30px;
-	margin-bottom: 25px;
-	width: 90%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 75%;
 	font-size: 2em;
 	font-weight: bold;
 	box-shadow: 2px 10px rgb(0,0,0,0.5);
 	padding: 20px 20px;
-	margin-left: 0.1%;
 	background-color: rgb(240,240,240,0.6);
 }
 
@@ -84,7 +81,7 @@ font-size: 2em;
 float: right;
 width: 13em;
 height: 2em;
-font-size: 1em;
+font-size: 0.8em;
 text-align: center;
 margin-right: 10px;
 margin-bottom: 0px;
@@ -99,13 +96,14 @@ transition: 0.3s;
 #loginBtn 
 {
 background-color: white;
-font-size: 2em;
 transition: 0.3s;
+position: relative;
+top: 40px;
 }
 
 #regBtn 
 {
-	margin-top: 5%;
+	margin-top: 1vw;
 	width: 80%;
 	background-color: white;
 	font-size: 2em;
